# partDNA

./: CMakeLists.txt  README.md  Snakefile  main.c
collections/: intlist.c  intlist.h  list.c  list.h  listutil.c  listutil.h
io/: raw_input.c  raw_input.h  raw_input_dna.c  raw_input_dna.h  raw_output_dna.c  raw_output_dna.h
splitting/: splitting_dna.c  splitting_dna.h
test_files/: README.md  convert_grc_long.py  stats.py  test_debian_single.py
util/: constants.h  panic.c  panic.h
util/eval/: time_consumption.c  time_consumption.h
